--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,24 @@
 @charset "UTF-8";
 
-/************************************************
-    heder   */
 body{
-    min-width: 1920px;
+    width: 100%;
+    background-color: black;
 }
-
-/************************************************
-    */
-
-/************************************************
-    */
-
-    /************************************************
-    */
-
-    /************************************************
-    */
-
-    /************************************************
-    */
-
-    /************************************************
-    */
-
-    /************************************************
-    */
-
-    /************************************************
-    */
-
-    /************************************************
-    */
-
-
-
-
-
-
-/************************************************
-    レスポンシブ対応 */
-
-@media screen and (max-width: 767px) {
+.perfect{
+    margin: 20% 20%;
+    position: relative;
+}
+.perfect::after{
+    position: absolute;
+    top:-14px;
+    left: -31px;
+    content: "";
+    width: 120px;
+    height: 70px;
+    border: 2px solid white;
+    border-radius: 12px;
+}
+.perfect p{
+    color: white;
+    font-size: 16px;
 }
